@@ -17,13 +17,12 @@ import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.TestInstance;
 
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 import static io.squashql.query.ComparisonMethod.ABSOLUTE_DIFFERENCE;
 import static io.squashql.query.Functions.*;
+import static io.squashql.query.TableField.tableField;
+import static io.squashql.query.TableField.tableFields;
 import static io.squashql.query.database.QueryEngine.GRAND_TOTAL;
 
 @TestClass(ignore = {TestClass.Type.SNOWFLAKE})
@@ -77,26 +76,26 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
   @Test
   void testRollupEquivalent() {
     Measure amount = Functions.sum("amount", "amount");
-
+    final List<Field> fields = tableFields(List.of("continent", "country", "city"));
     QueryDto queryWithoutRollup = Query
             .from(this.storeName)
-            .select(List.of("continent", "country", "city"), List.of(amount))
+            .select(fields, List.of(amount))
             .build();
     QueryDto queryRollup = Query
             .from(this.storeName)
-            .select(List.of("continent", "country", "city"), List.of(amount))
-            .rollup(List.of("continent", "country", "city"))
+            .select(fields, List.of(amount))
+            .rollup(fields)
             .build();
     Table resultRollup = this.executor.execute(queryRollup);
 
     // NO COLUMNS
     {
-      PivotTable result = this.executor.execute(new PivotTableQueryDto(queryWithoutRollup, List.of("continent", "country", "city"), List.of()));
+      PivotTable result = this.executor.execute(new PivotTableQueryDto(queryWithoutRollup, fields, List.of()));
       Assertions.assertThat(result.table).containsExactlyInAnyOrderElementsOf(resultRollup);
     }
     // NO ROWS
     {
-      PivotTable result = this.executor.execute(new PivotTableQueryDto(queryWithoutRollup, List.of(), List.of("continent", "country", "city")));
+      PivotTable result = this.executor.execute(new PivotTableQueryDto(queryWithoutRollup, List.of(), fields));
       Assertions.assertThat(result.table).containsExactlyInAnyOrderElementsOf(resultRollup);
     }
   }
@@ -111,10 +110,10 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     QueryDto query = Query
             .from(this.storeName)
             .where(criterion("city", in("la", "london"))) // to reduce size of the output
-            .select(List.of("spending category", "city"), List.of(amount))
+            .select(tableFields(List.of("spending category", "city")), List.of(amount))
             .build();
-    List<String> rows = List.of("city");
-    List<String> columns = List.of("spending category");
+    List<Field> rows = tableFields(List.of("city"));
+    List<Field> columns = tableFields(List.of("spending category"));
     PivotTable result = this.executor.execute(new PivotTableQueryDto(query, rows, columns));
 
     Assertions.assertThat(result.table).containsExactly(
@@ -151,7 +150,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
                     criterion("city", in("paris", "lyon", "london")),
                     criterion("country", in("france", "uk"))
             )) // to reduce size of the output
-            .select(List.of("spending category", "spending subcategory", "country", "city"), measures)
+            .select(tableFields(List.of("spending category", "spending subcategory", "country", "city")), measures)
             .build();
     List<String> rows = List.of("country", "city");
     List<String> columns = List.of("spending category", "spending subcategory");
@@ -166,7 +165,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     List<Measure> measures = List.of(amount, min);
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), measures)
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), measures)
             .build();
     List<String> rows = List.of("continent", "country", "city");
     List<String> columns = List.of("spending category", "spending subcategory");
@@ -175,7 +174,9 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
 
   @Test
   void testGroupingOneColumnEachAxis() {
-    BucketColumnSetDto bucketCS = new BucketColumnSetDto("group", "country")
+    final Field group = tableField("group");
+    final Field country = tableField("country");
+    BucketColumnSetDto bucketCS = new BucketColumnSetDto("group", country)
             .withNewBucket("european", List.of("uk", "france"))
             .withNewBucket("anglophone", List.of("usa", "uk"))
             .withNewBucket("all", List.of("usa", "uk", "france"));
@@ -184,7 +185,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
             "amountComp",
             ABSOLUTE_DIFFERENCE,
             amount,
-            Map.of("country", "c-1", "group", "g"),
+            Map.of(bucketCS.field, "c-1", tableField("group"), "g"),
             ColumnSetKey.BUCKET);
 
     List<Measure> measures = List.of(amountComp);
@@ -192,7 +193,8 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
             .from(this.storeName)
             .select(List.of(), List.of(bucketCS), measures)
             .build();
-    PivotTable result = this.executor.execute(new PivotTableQueryDto(query, List.of("country"), List.of("group")));
+    PivotTable result = this.executor.execute(new PivotTableQueryDto(query, Collections.singletonList(country),
+            Collections.singletonList(group)));
     Assertions.assertThat(result.table).containsExactly(
             List.of("european", "uk", 0d),
             List.of("european", "france", -1d),
@@ -214,7 +216,9 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
 
   @Test
   void testGroupingMultipleColumns(TestInfo testInfo) {
-    BucketColumnSetDto bucketCS = new BucketColumnSetDto("group", "country")
+    final Field group = tableField("group");
+    final Field country = tableField("country");
+    BucketColumnSetDto bucketCS = new BucketColumnSetDto("group", country)
             .withNewBucket("european", List.of("uk", "france"))
             .withNewBucket("anglophone", List.of("usa", "uk"))
             .withNewBucket("all", List.of("usa", "uk", "france"));
@@ -223,13 +227,13 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
             "amountComp",
             ABSOLUTE_DIFFERENCE,
             amount,
-            Map.of("country", "c-1", "group", "g"),
+            Map.of(country, "c-1", group, "g"),
             ColumnSetKey.BUCKET);
 
     List<Measure> measures = List.of(amountComp);
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category"), List.of(bucketCS), measures)
+            .select(tableFields(List.of("spending category")), List.of(bucketCS), measures)
             .build();
     verifyResults(testInfo, query, List.of("group", "country"), List.of("spending category"));
   }
@@ -240,7 +244,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     ComparisonMeasureReferencePosition pOp = new ComparisonMeasureReferencePosition("percentOfParent",
             ABSOLUTE_DIFFERENCE, // use this method instead of DIVIDE to have round figures
             amount,
-            List.of("city", "country", "continent"));
+            tableFields(List.of("continent", "country", "city")));
 
     List<Measure> measures = List.of(amount, pOp);
     QueryDto query = Query
@@ -249,7 +253,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
                     criterion("city", in("paris", "lyon", "london")),
                     criterion("country", in("france", "uk"))
             )) // to reduce size of the output
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), measures)
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), measures)
             .build();
     List<String> rows = List.of("continent", "country", "city");
     List<String> columns = List.of("spending category", "spending subcategory");
@@ -262,11 +266,11 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     List<Measure> measures = List.of(amount);
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), measures)
-            .rollup("spending category") // rollup is not supported with the pivot table API
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), measures)
+            .rollup(tableField("spending category")) // rollup is not supported with the pivot table API
             .build();
-    List<String> rows = List.of("continent", "country", "city");
-    List<String> columns = List.of("spending category", "spending subcategory");
+    List<Field> rows = tableFields(List.of("continent", "country", "city"));
+    List<Field> columns = tableFields(List.of("spending category", "spending subcategory"));
     Assertions.assertThatThrownBy(() -> this.executor.execute(new PivotTableQueryDto(query, rows, columns)))
             .hasMessage("Rollup is not supported by this API");
   }
@@ -277,16 +281,16 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     List<Measure> measures = List.of(amount);
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), measures)
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), measures)
             .build();
-    List<String> rowsWithoutContinent = List.of("country", "city");
-    List<String> columns = List.of("spending category", "spending subcategory");
+    List<Field> rowsWithoutContinent = tableFields(List.of("country", "city"));
+    List<Field> columns = tableFields(List.of("spending category", "spending subcategory"));
     // continent is missing despite the fact it is in the select
     Assertions.assertThatThrownBy(() -> this.executor.execute(new PivotTableQueryDto(query, rowsWithoutContinent, columns)))
             .hasMessage("[continent] in select but not on rows or columns. Please add those fields on one axis");
 
-    List<String> rows = List.of("continent", "country", "city");
-    List<String> columnsWithoutContinent = List.of("spending category");
+    List<Field> rows = tableFields(List.of("continent", "country", "city"));
+    List<Field> columnsWithoutContinent = tableFields(List.of("spending category"));
     // spending subcategory is missing despite the fact it is in the select
     Assertions.assertThatThrownBy(() -> this.executor.execute(new PivotTableQueryDto(query, rows, columnsWithoutContinent)))
             .hasMessage("[spending subcategory] in select but not on rows or columns. Please add those fields on one axis");
@@ -298,10 +302,10 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
     List<Measure> measures = List.of(amount);
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), measures)
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), measures)
             .build();
-    List<String> rows = List.of("unknown", "continent", "country", "city");
-    List<String> columns = List.of("spending category", "spending subcategory");
+    List<Field> rows = tableFields(List.of("unknown", "continent", "country", "city"));
+    List<Field> columns = tableFields(List.of("spending category", "spending subcategory"));
     // continent is missing despite the fact it is in the select
     Assertions.assertThatThrownBy(() -> this.executor.execute(new PivotTableQueryDto(query, rows, columns)))
             .hasMessage("[unknown] on rows or columns by not in select. Please add those fields in select");
@@ -314,10 +318,10 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
 
     QueryDto query = Query
             .from(this.storeName)
-            .select(List.of("spending category", "spending subcategory", "continent", "country", "city"), List.of(CountMeasure.INSTANCE))
+            .select(tableFields(List.of("spending category", "spending subcategory", "continent", "country", "city")), List.of(CountMeasure.INSTANCE))
             .build();
-    List<String> rows = List.of("continent", "country", "city");
-    List<String> columns = List.of("spending category", "spending subcategory");
+    List<Field> rows = tableFields(List.of("continent", "country", "city"));
+    List<Field> columns = tableFields(List.of("spending category", "spending subcategory"));
     PivotTable expectedPivotTable = this.executor.execute(new PivotTableQueryDto(query, rows, columns));
 
     String base = "select continent, country, city, \"spending category\", \"spending subcategory\", count(*) as \"_contributors_count_\" from \"" + this.storeName + "\" group by";
@@ -353,7 +357,7 @@ public abstract class ATestPivotTable extends ABaseTestQuery {
   }
 
   private void verifyResults(TestInfo testInfo, QueryDto query, List<String> rows, List<String> columns) {
-    PivotTable pt = this.executor.execute(new PivotTableQueryDto(query, rows, columns));
+    PivotTable pt = this.executor.execute(new PivotTableQueryDto(query, tableFields(rows), tableFields(columns)));
     Table expectedTabular = tableFromFile(testInfo);
 
     Assertions.assertThat(pt.table).containsExactlyElementsOf(ImmutableList.copyOf(expectedTabular.iterator()));
